force-app/main/default/objects/fboost__B_StepFunctionsGroupConfig__mdt/fboost__B_StepFunctionsGroupConfig__mdt.object-meta.xml
<CustomObject>
    <description>Defines the Step Functions Group which should be executed in single unit of work.</description>
    <label>Boost Step Functions Group Config</label>
    <pluralLabel>Boost Step Functions Group Config</pluralLabel>
</CustomObject>