force-app/main/default/objects/fboost__B_StepFunctionsGroupConfig__mdt/fields/fboost__AllOrNone__c.field-meta.xml
<CustomField>
    <fullName>fboost__AllOrNone__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Determines if Change Handler will apply &apos;all or none&apos; strategy during related objects modification. False =&gt; &apos;partial success&apos; strategy</description>
    <inlineHelpText>Determines if Change Handler will apply &apos;all or none&apos; strategy during related objects modification. False =&gt; &apos;partial success&apos; strategy</inlineHelpText>
    <label>All Or None</label>
    <type>Checkbox</type>
</CustomField>