force-app/main/default/objects/fboost__B_StepFunctionsGroupConfig__mdt/fields/fboost__BlockDMLInRecordLevelProcessing__c.field-meta.xml
<CustomField>
    <fullName>fboost__BlockDMLInRecordLevelProcessing__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Block DMLs in the StepFunction&apos;s initRecordProcessing and finishRecordProcessing methods. The system will throw BoostException when the code will execute a DML operation.</description>
    <inlineHelpText>Block DMLs in the StepFunction&apos;s initRecordProcessing and finishRecordProcessing methods. The system will throw BoostException when the code will execute a DML operation.</inlineHelpText>
    <label>Block DMLs in record level processing</label>
    <type>Checkbox</type>
</CustomField>