force-app/main/default/objects/fboost__B_StepFunctionsGroupConfig__mdt/fields/fboost__BlockSOQLInRecordLevelProcessing__c.field-meta.xml
<CustomField>
    <fullName>fboost__BlockSOQLInRecordLevelProcessing__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Block SOQL and SOSL query in the StepFunction&apos;s initRecordProcessing and finishRecordProcessing methods. The system will throw BoostException when the code will exceed provided limit.</description>
    <inlineHelpText>Block SOQL and SOSL query in the StepFunction&apos;s initRecordProcessing and finishRecordProcessing methods. The system will throw BoostException when the code will exceed provided limit.</inlineHelpText>
    <label>Block SOQL in record level processing</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>