force-app/main/default/objects/fboost__B_StepFunctionsGroupConfig__mdt/fields/fboost__DataLoader2__c.field-meta.xml
<CustomField>
    <fullName>fboost__DataLoader2__c</fullName>
    <description>Class name determine Data Loaders reated will this action. Class name need to implement SObjectChangeModule.DataLoader interface. Data loaded are shared in all actions</description>
    <inlineHelpText>Class name determine Data Loaders reated will this action. Class name need to implement SObjectChangeModule.DataLoader interface. Data loaded are shared in all actions.</inlineHelpText>
    <label>Data Loader #2</label>
    <length>100</length>
    <type>Text</type>
</CustomField>