force-app/main/default/objects/fboost__B_StepFunctionsGroupConfig__mdt/fields/fboost__Description__c.field-meta.xml
<CustomField>
    <fullName>fboost__Description__c</fullName>
    <description>Functionality logic description.</description>
    <inlineHelpText>Functionality logic description</inlineHelpText>
    <label>Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>