force-app/main/default/objects/fboost__B_StepFunctionsGroupConfig__mdt/fields/fboost__RecordLevelSecurity__c.field-meta.xml
<CustomField>
    <fullName>fboost__RecordLevelSecurity__c</fullName>
    <defaultValue>&quot;Inherited Sharing&quot;</defaultValue>
    <description>Determines Step Functions group Record Level Security used in DMLs</description>
    <inlineHelpText>Determines Step Functions group Record Level Security used in DMLs</inlineHelpText>
    <label>Record Level Security</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Inherited Sharing</fullName>
                <default>true</default>
                <label>Inherited Sharing</label>
            </value>
            <value>
                <fullName>Without Sharing</fullName>
            </value>
            <value>
                <fullName>With Sharing</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>