force-app/main/default/objects/fboost__B_StepFunctionsGroupConfig__mdt/listViews/fboost__All.listView-meta.xml
<ListView>
    <fullName>fboost__All</fullName>
    <columns>MasterLabel</columns>
    <columns>fboost__DataLoader1__c</columns>
    <columns>fboost__DataLoader2__c</columns>
    <columns>fboost__DataLoader3__c</columns>
    <columns>fboost__DataLoader4__c</columns>
    <columns>fboost__DataLoader5__c</columns>
    <columns>fboost__DataLoader6__c</columns>
    <columns>fboost__DataLoader7__c</columns>
    <columns>fboost__DataLoader8__c</columns>
    <columns>fboost__IsActive__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>